welcome page finished fully responsive but not interactive

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,234 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  font-optical-sizing: auto;
+  font-size: 62.5%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+img {
+  max-inline-size: 100%;
+  block-size: auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+body {
+  min-height: 100vh;
+  background-color: var(--main-bg);
+}
+
+:root {
+  --main-bg: #313E51;
+  --heading-color: #FFFFFF;
+  --caption-color: #ABC1E1;
+  --accent-color: #A729F5;
+  --secondary-color: #3B4D66;
+  --terciary-color: #26D782;
+  --error-color: #EE5454;
+}
+
+body[night-mode=true] {
+  --main-bg: #F4F6FA;
+  --heading-color: #313E51;
+  --caption-color: #626C7F;
+  --accent-color: #A729F5;
+  --secondary-color: #FFFFFF;
+  --terciary-color: #26D782;
+  --error-color: #EE5454;
+}
+
+.grid-wrapper {
+  padding-left: 2.4rem;
+  padding-right: 2.4rem;
+  display: grid;
+  gap: 2rem;
+  justify-content: center;
+}
+@media (width >= 43.75rem) {
+  .grid-wrapper {
+    padding-left: 6.4rem;
+    padding-right: 6.4rem;
+    gap: 2.4rem;
   }
 }
+@media (width >= 75rem) {
+  .grid-wrapper {
+    padding-left: 14rem;
+    padding-right: 14rem;
+    gap: 3.2rem;
+  }
+}
+.grid-wrapper--header {
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
+  grid-template-columns: auto 1fr 1fr auto;
+  grid-template-rows: auto;
+}
+@media (width >= 43.75rem) {
+  .grid-wrapper--header {
+    padding-top: 5.4rem;
+    padding-bottom: 6.3rem;
+    grid-template-columns: repeat(8, 5.9rem);
+  }
+}
+@media (width >= 75rem) {
+  .grid-wrapper--header {
+    padding-top: 9.7rem;
+    padding-bottom: 9.9rem;
+    grid-template-columns: repeat(12, 6.7rem);
+  }
+}
+.grid-wrapper--quiz {
+  padding-top: 3.2rem;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+}
+@media (width >= 43.75rem) {
+  .grid-wrapper--quiz {
+    padding-top: 0rem;
+    grid-template-columns: repeat(8, 5.9rem);
+  }
+}
+@media (width >= 75rem) {
+  .grid-wrapper--quiz {
+    grid-template-columns: repeat(12, 6.7rem);
+  }
+}
+
+.quiz {
+  grid-column: 1/5;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+@media (width >= 43.75rem) {
+  .quiz {
+    grid-column: 1/9;
+    gap: 6.4rem;
+  }
+}
+@media (width >= 75rem) {
+  .quiz {
+    grid-column: 1/13;
+    flex-direction: row;
+    gap: 13.1rem;
+  }
+}
+.quiz__intro {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+@media (width >= 75rem) {
+  .quiz__intro {
+    gap: 4.8rem;
+  }
+}
+.quiz__welcome-message {
+  font-size: clamp(4rem, 7vw, 6.4rem);
+  font-weight: 300;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: var(--heading-color);
+  display: flex;
+  flex-direction: column;
+}
+.quiz__welcome-message--highlight {
+  font-size: clamp(4rem, 7vw, 6.4rem);
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+.quiz__instructions {
+  font-style: italic;
+  font-size: clamp(1.4rem, 7vw, 2rem);
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 0%;
+  color: var(--caption-color);
+}
+.quiz__topics {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+@media (width >= 43.75rem) {
+  .quiz__topics {
+    gap: 2.4rem;
+  }
+}
+@media (width >= 75rem) {
+  .quiz__topics {
+    flex-grow: 1;
+  }
+}
+.quiz__topic {
+  padding: 1.2rem 1.2rem;
+  border-radius: 1.2rem;
+  background-color: var(--secondary-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.6rem;
+  font-size: clamp(1.8rem, 7vw, 2.8rem);
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: var(--heading-color);
+  transition: all 0.3s ease-out;
+}
+.quiz__topic:hover {
+  cursor: pointer;
+}
+.quiz__topic-icon {
+  padding: 0.8rem;
+  border-radius: 0.8rem;
+  background-color: var(--heading-color);
+}
+
+.header__theme-toggler {
+  grid-column: 4/5;
+  grid-row: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.6rem;
+  color: var(--heading-color);
+}
+@media (width >= 43.75rem) {
+  .header__theme-toggler {
+    grid-column: 7/9;
+  }
+}
+@media (width >= 75rem) {
+  .header__theme-toggler {
+    grid-column: 11/13;
+    justify-self: flex-end;
+  }
+}
+.header__topic {
+  grid-column: 1/2;
+  grid-row: 1;
+  font-size: clamp(1.8rem, 7vw, 2.8rem);
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: var(--heading-color);
+  visibility: hidden;
+}
+@media (width >= 43.75rem) {
+  .header__topic {
+    grid-column: 1/7;
+  }
+}
+@media (width >= 75rem) {
+  .header__topic {
+    grid-column: 1/11;
+  }
+}
+
+/*# sourceMappingURL=globals.css.map */
