--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -6,6 +6,10 @@
     --secondary-color: #3B4D66;
     --terciary-color: #26D782;
     --error-color: #EE5454;
+    --fixed-bg: #F4F6FA;
+    --fixed-color-2: #626C7F;
+    --fixed-color-1: #FFFFFF;
+    --topic-icon-bg: #FFF1E9;
 }
 
 body[night-mode="true"] {
