--- a/scss/global/_layout.scss
+++ b/scss/global/_layout.scss
@@ -39,7 +39,7 @@
         }
     }
 
-    &--quiz {
+    &--main {
         padding-top: 3.2rem;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: auto;
