--- a/scss/components/_quiz.scss
+++ b/scss/components/_quiz.scss
@@ -79,6 +79,10 @@
         &--hidden {
             display: none;
         }
+
+        &:focus {
+            outline: 0.2rem solid var(--heading-color);
+        }
         
         outline: none;
         border: none;
